nsgs.json
[
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"992a8d8f-71f7-46ca-95e4-e73a8d7d77a0\"",
        "id": "/subscriptions/e86c475b-9cad-4026-b008-7c1efaded92f/resourceGroups/rebloc-berlin/providers/Microsoft.Network/networkSecurityGroups/rebloc-trial-nsg/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rebloc-berlin",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"992a8d8f-71f7-46ca-95e4-e73a8d7d77a0\"",
        "id": "/subscriptions/e86c475b-9cad-4026-b008-7c1efaded92f/resourceGroups/rebloc-berlin/providers/Microsoft.Network/networkSecurityGroups/rebloc-trial-nsg/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rebloc-berlin",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"992a8d8f-71f7-46ca-95e4-e73a8d7d77a0\"",
        "id": "/subscriptions/e86c475b-9cad-4026-b008-7c1efaded92f/resourceGroups/rebloc-berlin/providers/Microsoft.Network/networkSecurityGroups/rebloc-trial-nsg/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rebloc-berlin",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"992a8d8f-71f7-46ca-95e4-e73a8d7d77a0\"",
        "id": "/subscriptions/e86c475b-9cad-4026-b008-7c1efaded92f/resourceGroups/rebloc-berlin/providers/Microsoft.Network/networkSecurityGroups/rebloc-trial-nsg/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rebloc-berlin",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"992a8d8f-71f7-46ca-95e4-e73a8d7d77a0\"",
        "id": "/subscriptions/e86c475b-9cad-4026-b008-7c1efaded92f/resourceGroups/rebloc-berlin/providers/Microsoft.Network/networkSecurityGroups/rebloc-trial-nsg/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rebloc-berlin",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"992a8d8f-71f7-46ca-95e4-e73a8d7d77a0\"",
        "id": "/subscriptions/e86c475b-9cad-4026-b008-7c1efaded92f/resourceGroups/rebloc-berlin/providers/Microsoft.Network/networkSecurityGroups/rebloc-trial-nsg/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rebloc-berlin",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"992a8d8f-71f7-46ca-95e4-e73a8d7d77a0\"",
    "id": "/subscriptions/e86c475b-9cad-4026-b008-7c1efaded92f/resourceGroups/rebloc-berlin/providers/Microsoft.Network/networkSecurityGroups/rebloc-trial-nsg",
    "location": "eastus",
    "name": "rebloc-trial-nsg",
    "networkInterfaces": [
      {
        "dnsSettings": null,
        "enableAcceleratedNetworking": null,
        "enableIpForwarding": null,
        "etag": null,
        "hostedWorkloads": null,
        "id": "/subscriptions/e86c475b-9cad-4026-b008-7c1efaded92f/resourceGroups/rebloc-berlin/providers/Microsoft.Network/networkInterfaces/rebloc-trial-nic",
        "interfaceEndpoint": null,
        "ipConfigurations": null,
        "location": null,
        "macAddress": null,
        "name": null,
        "networkSecurityGroup": null,
        "primary": null,
        "provisioningState": null,
        "resourceGroup": "rebloc-berlin",
        "resourceGuid": null,
        "tags": null,
        "tapConfigurations": null,
        "type": null,
        "virtualMachine": null
      }
    ],
    "provisioningState": "Succeeded",
    "resourceGroup": "rebloc-berlin",
    "resourceGuid": "9af340a9-33f0-46a6-93db-8bf2f3f46b9e",
    "securityRules": [
      {
        "access": "Allow",
        "description": "Allow SSH",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"992a8d8f-71f7-46ca-95e4-e73a8d7d77a0\"",
        "id": "/subscriptions/e86c475b-9cad-4026-b008-7c1efaded92f/resourceGroups/rebloc-berlin/providers/Microsoft.Network/networkSecurityGroups/rebloc-trial-nsg/securityRules/ssh",
        "name": "ssh",
        "priority": 200,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "rebloc-berlin",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": null,
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "3000",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"992a8d8f-71f7-46ca-95e4-e73a8d7d77a0\"",
        "id": "/subscriptions/e86c475b-9cad-4026-b008-7c1efaded92f/resourceGroups/rebloc-berlin/providers/Microsoft.Network/networkSecurityGroups/rebloc-trial-nsg/securityRules/Port_3000",
        "name": "Port_3000",
        "priority": 210,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "rebloc-berlin",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": null,
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "8545",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"992a8d8f-71f7-46ca-95e4-e73a8d7d77a0\"",
        "id": "/subscriptions/e86c475b-9cad-4026-b008-7c1efaded92f/resourceGroups/rebloc-berlin/providers/Microsoft.Network/networkSecurityGroups/rebloc-trial-nsg/securityRules/Port_8545",
        "name": "Port_8545",
        "priority": 220,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "rebloc-berlin",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "description": null,
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationApplicationSecurityGroups": null,
        "destinationPortRange": "8080-8082",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"992a8d8f-71f7-46ca-95e4-e73a8d7d77a0\"",
        "id": "/subscriptions/e86c475b-9cad-4026-b008-7c1efaded92f/resourceGroups/rebloc-berlin/providers/Microsoft.Network/networkSecurityGroups/rebloc-trial-nsg/securityRules/Port_Enigma",
        "name": "Port_Enigma",
        "priority": 230,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "rebloc-berlin",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourceApplicationSecurityGroups": null,
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "subnets": [
      {
        "addressPrefix": null,
        "addressPrefixes": null,
        "delegations": null,
        "etag": null,
        "id": "/subscriptions/e86c475b-9cad-4026-b008-7c1efaded92f/resourceGroups/rebloc-berlin/providers/Microsoft.Network/virtualNetworks/VirtualNetwork/subnets/Subnet-1",
        "interfaceEndpoints": null,
        "ipConfigurationProfiles": null,
        "ipConfigurations": null,
        "name": null,
        "networkSecurityGroup": null,
        "provisioningState": null,
        "purpose": null,
        "resourceGroup": "rebloc-berlin",
        "resourceNavigationLinks": null,
        "routeTable": null,
        "serviceAssociationLinks": null,
        "serviceEndpointPolicies": null,
        "serviceEndpoints": null
      }
    ],
    "tags": null,
    "type": "Microsoft.Network/networkSecurityGroups"
  }
]
